[package]
edition = "2021"
name = "monster_mash"
version = "0.1.0"

[dependencies]
bevy = "0.13.2"
bevy_ecs_tilemap = "0.12.0"
leafwing-input-manager = { version = "0.13.3", features = ["egui"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"

[features]
# N.b. we may need to disable the default features when building wasm.
default = ["dynamic"]
dynamic = ["bevy/dynamic_linking"]
